--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,116 @@
+:root {
+  --white: #f4f1de;
+  --black: #3d405b;
+  --link: #09a2ba;
+  --main: #ac0eb6;
+}
+
 * {
   font-family: 'Quicksand', sans-serif;
   box-sizing: border-box;
   padding: 0;
+  border: none;
   margin: 0;
+  color: var(--white);
+  font-size: 1rem;
+}
+
+h1 {
+  color: var(--main);
+  text-shadow: 1px 1px 1px #00000033;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+}
+
+p {
+  color: var(--black);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--black);
+}
+
+header, form, .input-container, button {
+  box-shadow: 1px 1px 10px 1px #00000033;
+}
+
+header, form {
+  width: 90%;
+  max-width: 600px;
+  padding: 2rem 4rem;
+}
+
+header {
+  background-color: var(--white);
+  border-radius: 6px 6px 0 0;
+  text-align: justify;
+}
+
+form {
+  border-radius: 0 0 6px 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.logo {
+  border-radius: 100%;
+  width: 120px;
+  margin: auto;
+  margin-bottom: 2rem;
+}
+
+.input-container, button {
+  background-color: var(--main);
+  height: 3rem;
+}
+
+.input-container {
+  margin-bottom: 1.6rem;
+  display: flex;
+}
+
+.input-container img {
+  width: 18px;
+  margin: 0 1rem;
+}
+
+.input-container input {
+  background-color: var(--black);
+  height: 100%;
+  width: 100%;
+  padding: 1rem;
+}
+
+button {
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  cursor: pointer;
+  transition: 300ms ease-in;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+input[type="checkbox"] {
+  margin-right: 6px;
+}
+
+a {
+  color: var(--link);
+  text-decoration: none;
+  transition: 300ms ease-in;
+}
+
+button:hover, a:hover {
+  filter: brightness(2);
 }
